--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,1 @@
-spring.application.name=mediasoft
-
-spring.jpa.show-sql = true
-spring.datasource.username = postgres
-spring.datasource.password = password
-spring.datasource.driverClassName = org.postgresql.Driver
-spring.datasource.url = jdbc:postgresql://localhost:5432/mediasoft_test
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.profiles.active=prod
