Adding migrations and small fixes

--- a/build.gradle
+++ b/build.gradle
@@ -35,9 +35,10 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 
 	runtimeOnly 'org.postgresql:postgresql'
-	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'com.h2database:h2:2.1.210'
+	implementation 'com.h2database:h2:2.1.210'
+
+	implementation 'org.flywaydb:flyway-core'
 }
 
 tasks.named('test') {
