--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,8 +1,15 @@
-spring.datasource.url = jdbc:postgresql://localhost:5432/mediasoft_test
-spring.datasource.username = postgres
-spring.datasource.password = password
-spring.datasource.driverClassName = org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/mediasoft_test
+spring.datasource.username=postgres
+spring.datasource.password=password
+spring.datasource.driverClassName=org.postgresql.Driver
 
-spring.jpa.properties.hibernate.format_sql = true
-spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.database=postgresql
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+spring.flyway.baseline-on-migrate=true
+spring.flyway.enabled=true
+spring.flyway.username=postgres
+spring.flyway.password=password
