--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:h2:mem:mediasoft_test
     username: sa
-    password: ${PWD}
+    password: password
     driverClassName: org.h2.Driver
 
   jpa:
@@ -18,5 +18,4 @@ spring:
       enabled: true
 
   liquibase:
-    enabled: true
-    change-log: classpath:db/changelog/db.changelog-master.xml
+    enabled: false
