Added a simple scheduler, and configured it to depend on the profile and its properties

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -20,3 +20,10 @@ spring:
   liquibase:
     enabled: true
     change-log: classpath:db/changelog/db.changelog-master.xml
+
+app:
+  scheduling:
+    enabled: true
+    period: 60000
+    priceIncreasePercentage: 10.1
+    optimization: false
