--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -7,7 +7,8 @@ spring:
 
   jpa:
     properties:
-      hibernate.format_sql: false
+      hibernate:
+        format_sql: false
     show-sql: false
     hibernate:
       ddl-auto: validate
@@ -17,3 +18,15 @@ spring:
   liquibase:
     enabled: true
     change-log: classpath:db/changelog/db.changelog-master.xml
+  batch:
+    job:
+      enabled: false
+    jdbc:
+      initialize-schema: always
+
+app:
+  scheduling:
+    enabled: true
+    period: 60000 #ms
+    priceIncreasePercentage: 10.1
+    optimization: true
