--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -12,6 +12,7 @@ spring:
     show-sql: false
     hibernate:
       ddl-auto: validate
+
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 
@@ -30,3 +31,4 @@ app:
     period: 60000 #ms
     priceIncreasePercentage: 10.1
     optimization: true
+    preparedStatement: true
