--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -7,13 +7,22 @@ spring:
 
   jpa:
     properties:
-      hibernate.format_sql: false
+      hibernate:
+        format_sql: false
     show-sql: false
     hibernate:
       ddl-auto: validate
+
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 
   liquibase:
     enabled: true
     change-log: classpath:db/changelog/db.changelog-master.xml
+
+app:
+  scheduling:
+    enabled: true
+    period: 60000 #ms
+    priceIncreasePercentage: 10.1
+    optimization: true
