--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,11 @@ dependencies {
     implementation 'com.h2database:h2:2.1.210'
 
     implementation 'org.liquibase:liquibase-core:4.27.0'
+
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
+    implementation 'com.github.ben-manes.caffeine:caffeine'
 }
 
 tasks.named('test') {
