--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -22,7 +22,13 @@ spring:
 
 app:
   scheduling:
-    enabled: true
+    enabled: false
     period: 60000 #ms
     priceIncreasePercentage: 10.1
     optimization: true
+
+currency-service:
+  client: service
+  host: http://localhost:8081 #хост второго сервиса
+  methods:
+    get-currency: /currencies #урл эндпоинта с курсами для GET запроса
