--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -28,7 +28,7 @@ app:
     optimization: true
 
 currency-service:
-  client: service
+  client: implementation
   host: http://localhost:8081 #хост второго сервиса
   methods:
     get-currency: /currencies #урл эндпоинта с курсами для GET запроса
