--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -8,8 +8,8 @@ spring:
   jpa:
     properties:
       hibernate:
-        format_sql: false
-    show-sql: false
+        format_sql: true
+    show-sql: true
     hibernate:
       ddl-auto: validate
 
@@ -22,7 +22,7 @@ spring:
 
 app:
   scheduling:
-    enabled: true
+    enabled: false
     period: 60000 #ms
     priceIncreasePercentage: 10.1
     optimization: true
