--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -34,3 +34,17 @@ rest:
     host: http://localhost:8081 #хост второго сервиса
     methods:
       get-currency: /currencies #урл эндпоинта с курсами для GET запроса
+
+  account-service:
+    mock:
+      enabled: true
+    host: http://localhost:8082 #хост сервиса аккаунтов
+    methods:
+      get-account: /account #урл эндпоинта с аккаунтами для GET запроса
+
+  crm-service:
+    mock:
+      enabled: true
+    host: http://localhost:8083 #хост CRM сервиса
+    methods:
+      get-inn: /crm #урл эндпоинта с ИНН для GET запроса
