--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -8,8 +8,8 @@ spring:
   jpa:
     properties:
       hibernate:
-        format_sql: false
-    show-sql: false
+        format_sql: true
+    show-sql: true
     hibernate:
       ddl-auto: validate
 
