--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -7,7 +7,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
       show-sql: true
       database-platform: org.hibernate.dialect.H2Dialect
       properties:
@@ -20,3 +20,28 @@ spring:
   liquibase:
     enabled: false
     change-log: classpath:db/changelog/db.changelog-master.xml
+
+rest:
+  currency-service:
+    mock:
+      enabled: false
+    #    host: ${CURRENCY_URL:http://localhost:8081} #хост сервиса валют
+    host: ${CURRENCY_URL:http://currency-service.myspace.svc.cluster.local:8080} #хост сервиса валют
+    methods:
+      get-currency: /currencies #урл эндпоинта с курсами для GET запроса
+
+  account-service:
+    mock:
+      enabled: false
+    #    host: ${ACCOUNT_URL:http://localhost:8082} #хост сервиса аккаунтов
+    host: ${ACCOUNT_URL:http://account-service.myspace.svc.cluster.local:8080} #хост сервиса аккаунтов
+    methods:
+      get-account: /account #урл эндпоинта с аккаунтами для GET запроса
+
+  crm-service:
+    mock:
+      enabled: false
+    #    host: ${CRM_URL:http://localhost:8083} #хост CRM сервиса
+    host: ${CRM_URL:http://crm-service.myspace.svc.cluster.local:8080} #хост CRM сервиса
+    methods:
+      get-inn: /crm #урл эндпоинта с ИНН для GET запроса
