--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,15 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-cache'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
+    implementation 'org.springframework.kafka:spring-kafka'
+
+    implementation 'org.camunda.bpm.springboot:camunda-bpm-spring-boot-starter-rest:7.17.0'
+    implementation 'org.camunda.bpm.springboot:camunda-bpm-spring-boot-starter-webapp:7.17.0'
+    implementation 'org.camunda.bpm:camunda-engine-plugin-spin:7.17.0'
+    implementation 'org.camunda.spin:camunda-spin-core:1.18.0'
+    implementation 'org.camunda.spin:camunda-spin-dataformat-json-jackson:1.17.0'
+
     // Добавляем зависимость для Swagger
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
 
