--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,8 @@ dependencies {
     implementation 'org.liquibase:liquibase-core:4.27.0'
 
     implementation 'com.github.ben-manes.caffeine:caffeine'
+
+    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.734'
 }
 
 tasks.named('test') {
