fix: add kafka-ui

--- a/docker-compose-kafka.yml
+++ b/docker-compose-kafka.yml
@@ -40,3 +40,10 @@ services:
       - "9092:9092"
       - "9091:9091"
       - "9101:9101"
+  kafka-ui:
+    container_name: kafka-ui
+    image: provectuslabs/kafka-ui:latest
+    ports:
+      - 8082:8080
+    environment:
+      DYNAMIC_CONFIG_ENABLED: true
