--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/mediasoft_test
-    username: postgres
-    password: ${PWD}
+    url: ${DATABASE_URL:jdbc:postgresql://localhost:5432}/${DATABASE_NAME:mediasoft_test}
+    username: ${SPRING_DATASOURCE_USERNAME:postgres}
+    password: ${SPRING_DATASOURCE_PASSWORD:password}
     driverClassName: org.postgresql.Driver
 
   jpa:
@@ -31,6 +31,23 @@ rest:
   currency-service:
     mock:
       enabled: false
-    host: http://localhost:8081 #хост второго сервиса
+    #    host: ${CURRENCY_URL:http://localhost:8081} #хост сервиса валют
+    host: ${CURRENCY_URL:http://currency-service.myspace.svc.cluster.local:8080} #хост сервиса валют
     methods:
       get-currency: /currencies #урл эндпоинта с курсами для GET запроса
+
+  account-service:
+    mock:
+      enabled: true
+    #    host: ${ACCOUNT_URL:http://localhost:8082} #хост сервиса аккаунтов
+    host: ${ACCOUNT_URL:http://account-service.myspace.svc.cluster.local:8080} #хост сервиса аккаунтов
+    methods:
+      get-account: /account #урл эндпоинта с аккаунтами для GET запроса
+
+  crm-service:
+    mock:
+      enabled: true
+    #    host: ${CRM_URL:http://localhost:8083} #хост CRM сервиса
+    host: ${CRM_URL:http://crm-service.myspace.svc.cluster.local:8080} #хост CRM сервиса
+    methods:
+      get-inn: /crm #урл эндпоинта с ИНН для GET запроса
