--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -34,7 +34,7 @@ kafka:
 rest:
   currency-service:
     mock:
-      enabled: false
+      enabled: true
     #    host: ${CURRENCY_URL:http://localhost:8081} #хост сервиса валют
     host: ${CURRENCY_URL:http://currency-service.myspace.svc.cluster.local:8080} #хост сервиса валют
     methods:
@@ -55,3 +55,10 @@ rest:
     host: ${CRM_URL:http://crm-service.myspace.svc.cluster.local:8080} #хост CRM сервиса
     methods:
       get-inn: /crm #урл эндпоинта с ИНН для GET запроса
+
+s3:
+  accessKeyId: test
+  secretAccessKey: test
+  serviceEndpoint: s3.localhost.localstack.cloud:4566
+  bucket: new-bucket-13be60c2
+  signingRegion: eu-central-1
