--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -56,6 +56,14 @@ rest:
     methods:
       get-inn: /crm #урл эндпоинта с ИНН для GET запроса
 
+  camunda-service:
+    mock:
+      enabled: false
+    #    host: ${CRM_URL:http://localhost:8084} #хост CRM сервиса
+    host: ${CAMUNDA_URL:http://localhost:8084} #хост CRM сервиса
+    methods:
+      start-confirm: confirm/start #урл эндпоинта с ИНН для GET запроса
+
 s3:
   accessKeyId: test
   secretAccessKey: test
